apps/servicex/virtualservice/servicex-vs-base3.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: servicex-vs
  namespace: servicex
spec:
  hosts:
  - "servicex.cb-interview.com"
  gateways:
  - istio-ingress/gateway
  http:
  - match:
    - uri:
        exact: "/x"
    route:
    - destination:
        host: servicex.servicex.svc.cluster.local
        port:
          number: 8080
