apps/servicex/virtualservice/servicex-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: servicex-vs
  namespace: servicex
spec:
  hosts:
  - "servicex.cb-interview.com"
  gateways:
  - istio-ingress/gateway
  http:
  - match:
    - uri:
        prefix: "/" 
    redirect:
      uri: "/x"
      authority: "servicex.cb-interview.com"
  - match:
    - uri:
        prefix: "/" 
    route:
    - destination:
        host: servicex.servicex.svc.cluster.local
        port:
          number: 8080
